test/conformance/chainsaw/rbac/cleanup-policy-with-clusterrole/policy.yaml
apiVersion: kyverno.io/v2
kind: ClusterCleanupPolicy
metadata:
  name: test-secret-removal
spec:
  match:
    any:
    - resources:
        kinds:
        - Secret
        names:
        - test-secret
  schedule: "*/10 * * * *"
