test/conformance/chainsaw/rbac/cleanup-policy-with-clusterrole/policy-assert.yaml
apiVersion: kyverno.io/v2
kind: ClusterCleanupPolicy
metadata:
  name: test-secret-removal
spec: {}
