test/conformance/chainsaw/rbac/cleanup-policy-with-clusterrole/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cleanup-policy-with-clusterrole
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: clusterrole.yaml
  - name: step-02
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
